# Mosquitto_Client

./: .travis.yml  README.MD
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/trongvu/android/com/mosquittomqtt/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_log.h  com_android_trongvu_mosquittomqtt_wrapper_MosquittoWrapper.cpp  com_android_trongvu_mosquittomqtt_wrapper_MosquittoWrapper.h  mosquitto_callback_wrapper.cpp  mosquitto_callback_wrapper.h
app/src/main/java/com/android/trongvu/mosquittomqtt/: MainActivity.java
app/src/main/java/com/android/trongvu/mosquittomqtt/message/: EventMessage.java
app/src/main/java/com/android/trongvu/mosquittomqtt/service/: MosuqittoService.java
app/src/main/java/com/android/trongvu/mosquittomqtt/wrapper/: MosquittoWrapper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/trongvu/android/com/mosquittomqtt/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
